# ai-study-agent-dashboard

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: design.md
examples/: sample_note.md
src/study_agent/: ai_client.py  config.py  database.py  main.py  models.py  prompts.py  repository.py  schemas.py
src/study_agent/routes/: notes.py  web.py
src/study_agent/templates/: base.html  index.html  note_detail.html
tests/: test_database.py  test_prompts.py  test_repository.py  test_routes.py
